--- a/lyqc-report-web/.settings/org.eclipse.wst.common.component
+++ b/lyqc-report-web/.settings/org.eclipse.wst.common.component
@@ -4,25 +4,13 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <dependent-module archiveName="liyun-core-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/liyun-core/liyun-core">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="liyun-common-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/liyun-common/liyun-common">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="liyun-orm-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/liyun-orm/liyun-orm">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
         <dependent-module archiveName="lyqc-report-soa-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/lyqc-report-soa/lyqc-report-soa">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="lyqc-report-iface-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/lyqc-report-iface/lyqc-report-iface">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="liyun-mail-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/liyun-mail/liyun-mail">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module deploy-path="/" handle="module:/overlay/prj/liyun-ui?includes=**/**&amp;excludes=META-INF/MANIFEST.MF">
+        <dependent-module deploy-path="/" handle="module:/overlay/var/M2_REPO/com/liyun/car/liyun-ui/0.0.1-SNAPSHOT/liyun-ui-0.0.1-SNAPSHOT.war?unpackFolder=target/m2e-wtp/overlays&amp;includes=**/**&amp;excludes=META-INF/MANIFEST.MF">
             <dependency-type>consumes</dependency-type>
         </dependent-module>
         <dependent-module deploy-path="/" handle="module:/overlay/slf/?includes=**/**&amp;excludes=META-INF/MANIFEST.MF">
