--- a/lyqc-report-web/.settings/org.eclipse.wst.common.component
+++ b/lyqc-report-web/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="lyqc-report-web">
+    <wb-module deploy-name="lzqc-report-web">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
@@ -17,6 +17,6 @@
             <dependency-type>consumes</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/lyqc-report-web/target/classes"/>
-        <property name="context-root" value="lyqc-report-web"/>
+        <property name="context-root" value="lzqc-report-web"/>
     </wb-module>
 </project-modules>
